get sms code (mess)

--- a/SimulatorUtils/Info.plist
+++ b/SimulatorUtils/Info.plist
@@ -20,8 +20,12 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.developer-tools</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
+	<key>LSUIElement</key>
+	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2020 Nikola Gorgiev. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
@@ -32,5 +36,16 @@
 	<true/>
 	<key>NSSupportsSuddenTermination</key>
 	<true/>
+	<key>Apple Events</key>
+	<true/>
+	<key>NSAppleEventsUsageDescription</key>
+	<string>Do you alow automation for this app?</string>
+	<key>CFBundleDisplayName</key>
+	<string></string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
