--- a/SimulatorUtils 2020-07-22 11-33-44/WITUtils.app/Contents/Info.plist
+++ b/SimulatorUtils 2020-07-22 11-33-44/WITUtils.app/Contents/Info.plist
@@ -33,17 +33,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11E608c</string>
+	<string>11E708</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>19E258</string>
+	<string>19G68</string>
 	<key>DTSDKName</key>
 	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1150</string>
+	<string>1160</string>
 	<key>DTXcodeBuild</key>
-	<string>11E608c</string>
+	<string>11E708</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.developer-tools</string>
 	<key>LSMinimumSystemVersion</key>
